[tool.poetry]
name = "flask_tut"
version = "0.1.0"
description = ""
authors = ["Ferril <ferril.darkdiver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
python-dotenv = "^0.10.3"
flask-wtf = "^0.14.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
