[tool.poetry]
name = "flask_tut"
version = "0.1.0"
description = ""
authors = ["Ferril <ferril.darkdiver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
python-dotenv = "^0.10.3"
flask-wtf = "^0.14.2"
flask-sqlalchemy = "^2.4"
flask-migrate = "^2.5"
flask-login = "^0.4.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
